--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 				<label><%- title %></label>
 				<button class="destroy"></button>
+				<button class="destroy" id="edit-btn"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
 		</script>
